refactor: make JPQL code Java 17 compatible